Tweak media kit

--- a/mediakit.html
+++ b/mediakit.html
@@ -36,6 +36,10 @@ permalink: /mediakit/
     </tr>
 </table>
 <style>
+    a {
+        text-decoration: none;
+    }
+
     .gernene-siggy {
         display: block;
         font-family: sans-serif;
@@ -70,6 +74,7 @@ permalink: /mediakit/
 
     .gernene-siggy-links a {
         text-decoration: none;
+        margin: 0 .5rem 0 0;
     }
 
     .gernene-siggy-links a img {
