Tweak media kit

--- a/mediakit.html
+++ b/mediakit.html
@@ -36,6 +36,11 @@ permalink: /mediakit/
     </tr>
 </table>
 <style>
+    body, html {
+        margin: 0;
+        padding: 0;
+    }
+
     a {
         text-decoration: none;
     }
@@ -43,8 +48,6 @@ permalink: /mediakit/
     .gernene-siggy {
         display: block;
         font-family: sans-serif;
-        margin: .5rem;
-        padding: .8rem;
     }
 
     .gernene-siggy td {
