Tweak media kit

--- a/mediakit.html
+++ b/mediakit.html
@@ -20,16 +20,16 @@ permalink: /mediakit/
             </a>
             <div class="gernene-siggy-links">
                 <a href="https://www.linkedin.com/in/gernene/">
-                    <img src="{{ site.url }}/img/mediakit/linkedin-in-brands.svg">
+                    <img src="{{ site.url }}/img/mediakit/linkedin-in-brands.png">
                 </a>
                 <a href="https://github.com/Gernene">
-                    <img src="{{ site.url }}/img/mediakit/github-brands.svg">
+                    <img src="{{ site.url }}/img/mediakit/github-brands.png">
                 </a>
                 <a href="https://dribbble.com/Gernene">
-                    <img src="{{ site.url }}/img/mediakit/dribbble-brands.svg">
+                    <img src="{{ site.url }}/img/mediakit/dribbble-brands.png">
                 </a>
                 <a href="https://www.instagram.com/gernene.tan/">
-                    <img src="{{ site.url }}/img/mediakit/instagram-brands.svg">
+                    <img src="{{ site.url }}/img/mediakit/instagram-brands.png">
                 </a>
             </div>
         </td>
@@ -39,10 +39,6 @@ permalink: /mediakit/
     body, html {
         margin: 0;
         padding: 0;
-    }
-
-    a {
-        text-decoration: none;
     }
 
     .gernene-siggy {
@@ -56,11 +52,10 @@ permalink: /mediakit/
 
     .gernene-siggy-img {
         margin: 0 1rem 0 0;
-        width: 4rem;
+        width: 3rem;
     }
 
     .gernene-siggy-name {
-        font-size: 1.2rem;
         text-transform: uppercase;
     }
 
@@ -72,7 +67,7 @@ permalink: /mediakit/
 
     .gernene-siggy-links {
         font-size: 1.4rem;
-        margin: 1rem 0 0 0;
+        margin: .5rem 0 0 0;
     }
 
     .gernene-siggy-links a {
