--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ permalink: /about/
 
 <div id="about">
 
-  <img src="{{ site.url }}/img/gernene.jpg">
+  <img src="{{ site.url }}/img/gernene.jpg" alt="Gernene" title="Gernene">
   
   <div class="about-cont">
 
