--- a/projects/fhs.html
+++ b/projects/fhs.html
@@ -19,7 +19,7 @@ counselingWireframes:
         <div class="project-summary">
             <h1>Fairview High School</h1>
             <p>
-                I led a <b>responsive redesign</b> and content restructure of Fairview High School’s website to provide an intuitive way for students, staff, and parents to find information and manage their content. 
+                I led a <b><a href="https://fairviewhs.org">responsive redesign</a></b> and content restructure of Fairview High School’s website to provide an intuitive way for students, staff, and parents to find information and manage their content. 
             </p>
         </div>
         <div class="project-details">
