Start adding custom js and css

--- a/board.html
+++ b/board.html
@@ -2,10 +2,9 @@
 layout: default
 title: Mood Board
 permalink: /board/
+custom_css: board
+custom_js: board
 ---
-
-<link rel="stylesheet" type="text/css" href="/css/board.css">
-<script src="/js/board.js"></script>
 
 <h1 class="gallery-h1">Inspiration Board</h1>
 
