Add lazy loading

--- a/board.html
+++ b/board.html
@@ -3,7 +3,9 @@ layout: default
 title: Mood Board
 permalink: /board/
 custom_css: board
-custom_js: board
+custom_js:
+- yall.min
+- board
 ---
 
 <h1 class="gallery-h1">Inspiration Board</h1>
