Finish most of webtoon

--- a/webtoon.html
+++ b/webtoon.html
@@ -1,23 +1,30 @@
 ---
-permalink: /sunslayer/graphicnovel/
-imgRootPath: "/img/projects/sun-slayer/graphic-novel/"
+permalink: /sunslayer/webtoon/
+imgRootPath: "/img/projects/sun-slayer/webtoon/"
 ---
 
 <!DOCTYPE>
 <html>
     <head>
 	<link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i" rel="stylesheet">
-	<link href="/css/graphic-novel.css" rel="stylesheet">
+	<link href="/css/webtoon.css" rel="stylesheet">
+        <script src="/js/webtoon.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Sun Slayer - Webtoon</title>
     </head>
     <body>
+	<div class="page">
+	    <div class="frame frame-white">
+		<h1 class="title">Sun Slayer</h1>
+	    </div>
+	</div>
 	<div class="page page-row">
 	    <img src="{{ page.imgRootPath }}hurt.jpg" class="frame">
 	    <p>
 		"I see the other students have beat you again..."
 	    </p>
 	</div>
-	<div class="page">
+	<div class="page page-row">
 	    <img src="{{ page.imgRootPath }}concern.jpg" class="frame">
 	    <p>
 	        "Why must it be the palace, Sorreyu? Must you sacrifice <em>everything</em> for your revenge? Your life itself?"
@@ -26,10 +33,10 @@ imgRootPath: "/img/projects/sun-slayer/graphic-novel/"
 	<div class="page page-col-r">
 	    <img src="{{ page.imgRootPath }}bandage.jpg" class="frame">
 	    <p>
-	        "I cannot live otherwise, Hyuse. How could I believe in justice or eveen bear the sight of my own reflection? I have not yet done everthing I can to uncover the truth... to protect my convictions."
+	        "I cannot live otherwise, Hyuse. How could I believe in justice or even bear the sight of my own reflection? I have not yet done everthing I can to uncover the truth... to protect my convictions."
 	    </p>
 	</div>
-	<div class="page">
+	<div class="page page-row">
 	    <img src="{{ page.imgRootPath }}toDieFor.jpg" class="frame">
 	    <p>
 	        "Perhaps I once had other... dreams. But they died with my family, my home, with the world I thought I knew."
@@ -51,7 +58,7 @@ imgRootPath: "/img/projects/sun-slayer/graphic-novel/"
 	<div class="page page-row">
 	    <img src="{{ page.imgRootPath }}dreams.jpg" class="frame">
 	    <p>
-	        "What makes me me? What is something I would <em>die</em> for? I feel like I should have an answer to those questions... but I don't."
+	        "What is something I would <em>die</em> for? I feel I should have an answer to that question... but I don't."
 	    </p>
 	</div>
 	<div class="page">
@@ -61,13 +68,13 @@ imgRootPath: "/img/projects/sun-slayer/graphic-novel/"
 		</p>
 	    </div>
 	</div>
-	<div class="page">
-	    <img src="{{ page.imgRootPath }}plans.jpg" class="frame">
+	<div class="page page-col">
 	    <p>
 	        "This may be our last chance to rid ourselves of Sorreyu before he really becomes a problem."
 	    </p>
+	    <img src="{{ page.imgRootPath }}plans.jpg" class="frame">
 	    <p>
-	        "Ha! The lowly orphan thinks he can mooch off Faerin's nobility? Ha!"
+	        "Ha! The orphaned cripple thinks he can mooch off Faerin's nobility? Ha!"
 	    </p>
 	</div>
 	<div class="page">
@@ -85,30 +92,39 @@ imgRootPath: "/img/projects/sun-slayer/graphic-novel/"
 	        "Fire! Fire! Move aside!"
 	    </p>
 	</div>
-	<div class="page">
-	    <img src="{{ page.imgRootPath }}iSeeYou.jpg" class="frame">
-	    <p>
-	        "You must be my father's secret messenger."
-	    </p>
-	    <img src="{{ page.imgRootPath }}iSeeYouToo.jpg" class="frame">
-	    <p>
-	        "I left an urgent package from Lord Aihan earlier this evening. His Excellency stressed that it reach your hands quickly." 
+	<div class="page rows">
+	    <div class="row-r">
+		<img src="{{ page.imgRootPath }}iSeeYou.jpg" class="frame">
+		<p>
+		    "You must be my father's secret messenger."
+		</p>
+	    </div>
+	    <div class="row">
+		<img src="{{ page.imgRootPath }}iSeeYouToo.jpg" class="frame">
+		<p>
+		    "I left an urgent package from Lord Aihan earlier this evening. His Excellency stressed that it reach your hands quickly." 
+		</p>
+	    </div>
 	</div>
-	<div class="page">
+	<div class="page page-row">
 	    <img src="{{ page.imgRootPath }}searching.jpg" class="frame">
 	    <p>
 	        "A package? This evening? No... something's not quite right..."
 	    </p>
+	</div>
+	<div class="page page-col">
 	    <img src="{{ page.imgRootPath }}nothing.jpg" class="frame">
 	    <p>
 	        "There's nothing here..."
 	    </p>
 	</div>
-	<div class="page">
+	<div class="page page-row-r">
 	    <img src="{{ page.imgRootPath }}father.jpg" class="frame">
 	    <p>
 	        "I had the audacity, Aikyung, to think an education would make you less illiterate."
 	    </p>
+	</div>
+	<div class="page page-col">
 	    <img src="{{ page.imgRootPath }}back.jpg" class="frame">
 	    <p>
 	        "If you came to ask me how to read words, return to the Royal Academy at once. Do not trouble me further."
@@ -157,13 +173,13 @@ imgRootPath: "/img/projects/sun-slayer/graphic-novel/"
 		</p>
 	    </div>
 	</div>
-	<div class="page">
+	<div class="page page-row">
 	    <img src="{{ page.imgRootPath }}wildCard.jpg" class="frame">
 	    <p>
 	        "If this amulet belongs to the Minister of the Military, he knows where the missing prince is. He's asking his son to bring his personal troops there... and he's keeping this from the King?"
 	    </p>
 	</div>
-	<div class="page">
+	<div class="page page-row">
 	    <img src="{{ page.imgRootPath }}kept.jpg" class="frame">
 	    <p>
 	        "It's only a matter of time before Lord Aihan sends someone after our heads. This is treason."
@@ -178,6 +194,27 @@ imgRootPath: "/img/projects/sun-slayer/graphic-novel/"
 	</div>
 	<div class="page">
 	    <img src="{{ page.imgRootPath }}challenge.jpg" class="frame">
+	</div>
+	<div class="page">
+	    <div class="frame frame-white">
+		<p>
+		    Whether you live by the careful schemes of your mind or the fire of wild emotion
+		</p>
+	    </div>
+	</div>
+	<div class="page">
+	    <div class="frame frame-white">
+		<p>
+		    All the world may pay the price.
+		</p>
+	    </div>
+	</div>
+	<div class="page">
+	    <div class="frame-white">
+		<p class="end">
+		    End
+		</p>
+	    </div>
 	</div>
     </body>
 </html>
