Fix webtoon permalink

--- a/projects/sun-slayer/webtoon.html
+++ b/projects/sun-slayer/webtoon.html
@@ -1,6 +1,6 @@
 ---
-permalink: /sunslayer/graphicnovel/
-imgRootPath: "/img/projects/sun-slayer/graphic-novel/"
+permalink: /sunslayer/webtoon/
+imgRootPath: "/img/projects/sun-slayer/webtoon/"
 ---
 
 <!DOCTYPE>
