--- a/projects/sun-slayer/webtoon.html
+++ b/projects/sun-slayer/webtoon.html
@@ -1,6 +1,6 @@
 ---
-permalink: /sunslayer/webtoon/
-imgRootPath: "/img/projects/sun-slayer/webtoon/"
+permalink: /projects/sunslayer/webtoon/
+imgRootPath: "/img/projects/sunslayer/webtoon/"
 ---
 
 <!DOCTYPE>
