Change sun link

--- a/projects/sunwebtoon.html
+++ b/projects/sunwebtoon.html
@@ -1,6 +1,6 @@
 ---
-permalink: /projects/sunslayer/webtoon/
-imgRootPath: "/img/projects/sunslayer/webtoon/"
+permalink: /sunslayer/webtoon/
+imgRootPath: "/img/projects/sun-slayer/webtoon/"
 ---
 
 <!DOCTYPE>
