Update case studies

--- a/projects/docforge.html
+++ b/projects/docforge.html
@@ -10,7 +10,7 @@ permalink: /projects/docforge/
         <div class="project-summary">
             <h1>DocForge</h1>
             <p>
-                As part of Startup Summer 2019, our team pitched DocForge: A simpler and faster documentation tool for software developers.
+                As part of Startup Summer 2019, our team pitched DocForge: A tool that simplifies, incentivizes, and transforms documentation. We were honored to win both first place and audience choice.
             </p>
         </div>
         <div class="project-details">
@@ -116,9 +116,8 @@ permalink: /projects/docforge/
                 <li>Notifications in messaging apps to remind users to update outdated docs</li>
             </ul>
             <div class="sketches">
-                <img src="{{ site.url }}/img/projects/jsc/sketch1.jpg" class="sketch">
-                <img src="{{ site.url }}/img/projects/jsc/sketch2.jpg" class="sketch">
-                <img src="{{ site.url }}/img/projects/jsc/sketch3.jpg" class="sketch">
+                <img src="{{ site.url }}/img/projects/docforge/sketch1.jpg" class="sketch">
+                <img src="{{ site.url }}/img/projects/docforge/sketch2.jpg" class="sketch">
             </div>
             <p class="project-p">
                 Due to our pressing deadline, we later limited the product's development to items that would be displayed during the demo. We began actual development with a heavy front-end focus following a rough demo script:
