Update resume page

--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,15 @@ permalink: /resume/
 </p>
 
 <h2>Experience & Projects</h2>
+<h3>Halp: Slack-First Support Ticketing</h3>
+<ul>
+    <li>Engineering intern (summer 2019 - present)</li>
+    <li>Built MicrosoftTeams Halp integration and Teams-Jira integration</li>
+    <li>Developed web UI for Halp's Answers product</li>
+    <li>Built web editor for Halp that mimicks Slack's UX</li>
+    <li>NodeJS, MongoDB, Postgresql, GraphQL, various APIs</li>
+    <li>Graphics/branding and technical content writing</li>
+</ul>
 
 <h3>
   Fairview Web Team:
@@ -26,39 +35,7 @@ permalink: /resume/
 </h3>
 <ul>
   <li>2 year leader</li>
-  <li>Currently leading top-down responsive redesign and full content restructure</li>
-</ul>
-
-<h3>
-  Fairview Robotics (FRC Team)
-</h3>
-<ul>
-  <li>Programmer</li>
-  <li>Media Captain</li>
-</ul>
-
-<h3>Fairview Girls Who Code</h3>
-<p>Core member and co-leader</p>
-<h4>Operation Give Back (Student Volunteer Match Site)</h4>
-<ul>
-  <li>Ruby on Rails site built with help of Michael Hartl's Rails Tutorial</li>
-  <li>Created responsive and mobile-friendly layout using Bootstrap</li>
-</ul>
-<h4>
-  Fairview Girls Who Code Site
-</h4><ul>
-  <li>Informational site to promote membership and participation</li>
-  <li>Responsive design</li>
-</ul>
-
-<h3>
-  Solisles (Virtual Pet Site):
-  <a href="http://solisles.com">solisles.com</a>
-</h3>
-<ul>
-  <li>Modified an open-source script to create a unique “adoptable site”</li>
-  <li>Managed website matters from administration to web design and feature release</li>
-  <li>A concoction of original ideas, cute animated graphics, and lots of code</li>
+  <li>Lead top-down responsive redesign and content restructure</li>
 </ul>
 
 <h3>
@@ -72,15 +49,11 @@ permalink: /resume/
 
 <h2>Education</h2>
 <p>
-  Fairview High School, Boulder, CO<br>
-  Senior
+  University of Colorado Boulder<br>
+  Computer Science (BS)
 </p>
 <ul>
-  <li>Relevant Courses: AP Computer Science, IB Computer Science HL</li>
-  <li>
-    Relevant Clubs: Code Club, Robotics, Technology Student Association, Girls
-    Who Code, Fairview Web Team
-  </li>
+  <li>Programming and Data Structures</li>
 </ul>
 
 <h2>Additional Skills</h2>
