--- a/projects/wcagdataviz.html
+++ b/projects/wcagdataviz.html
@@ -13,12 +13,32 @@ permalink: /projects/wcagdataviz/
   </head>
   <body>
       <div class="slide-0">
-        <div class="title"><span>A</span>ccess</div>
-        <div class="subtitle">Visual introduction to accessible design</div>
+        <div class="heading">
+          <div class="title"><span>A</span>ccess</div>
+          <div class="subtitle">Visual introduction to accessible design.</div>
+        </div>
       </div>
     <div class="wrapper">
       <div class="sidebar">
-        
+        <nav>
+          <ul>
+            <li>
+              <a href="">Start</a>
+            </li>
+            <li>
+              <a href="">Introduction</a>
+            </li>
+            <li>
+              <a href="">ADA Title III</a>
+            </li>
+            <li>
+              <a href="">WCAG</a>
+            </li>
+            <li>
+              <a href="">How Accessible Is My Site?</a>
+            </li>
+          </ul>
+        </nav>
       </div>
       <div class="portal">
         
