--- a/projects/wcagdataviz.html
+++ b/projects/wcagdataviz.html
@@ -17,6 +17,39 @@ permalink: /projects/wcagdataviz/
           <div class="title"><span>A</span>ccess</div>
           <div class="subtitle">Visual introduction to accessible design.</div>
         </div>
+        <div class="access-anim">
+          <div class="access-anim-bar-chart">
+            <div class="access-anim-bar-chart-line"></div>
+            <div class="access-anim-bar-chart-line"></div>
+            <div class="access-anim-bar-chart-line"></div>
+            <div class="access-anim-bar bar-1">
+              <div class="access-anim-bar-f"></div>
+              <div class="access-anim-bar-r"></div>
+              <div class="access-anim-bar-t"></div>
+            </div>
+            <div class="access-anim-bar bar-2">
+              <div class="access-anim-bar-f"></div>
+              <div class="access-anim-bar-r"></div>
+              <div class="access-anim-bar-t"></div>
+            </div>
+            <div class="access-anim-bar bar-3">
+              <div class="access-anim-bar-f"></div>
+              <div class="access-anim-bar-r"></div>
+              <div class="access-anim-bar-t"></div>
+            </div>
+          </div>
+          <div class="access-anim-progress">
+            <div class="access-anim-progress-f">
+              <div class="access-anim-progress-f-l"></div>
+              <div class="access-anim-progress-f-r"></div>
+            </div>
+            <div class="access-anim-progress-r"></div>
+            <div class="access-anim-progress-t">
+              <div class="access-anim-progress-t-l"></div>
+              <div class="access-anim-progress-t-r"></div>
+            </div>
+          </div>
+        </div>
       </div>
     <div class="wrapper">
       <div class="sidebar">
