--- a/projects/wcagdataviz.html
+++ b/projects/wcagdataviz.html
@@ -8,6 +8,7 @@ permalink: /projects/wcagdataviz/
   <head>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../../css/wcagdataviz.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../../js/wcagdataviz.js"></script>
   </head>
@@ -18,6 +19,46 @@ permalink: /projects/wcagdataviz/
           <div class="subtitle">Visual introduction to accessible design.</div>
         </div>
         <div class="access-anim">
+          <div class="access-anim-platform-box">
+            <div class="access-anim-platform"></div>
+          </div>
+          <div class="access-anim-cubes">
+            <div class="access-anim-cube">
+              <div class="access-anim-cube-f"></div>
+              <div class="access-anim-cube-r"></div>
+              <div class="access-anim-cube-t"></div>
+            </div>
+            <div class="access-anim-cube">
+              <div class="access-anim-cube-f"></div>
+              <div class="access-anim-cube-r"></div>
+              <div class="access-anim-cube-t"></div>
+            </div>
+            <div class="access-anim-cube">
+              <div class="access-anim-cube-f"></div>
+              <div class="access-anim-cube-r"></div>
+              <div class="access-anim-cube-t"></div>
+            </div>
+            <div class="access-anim-cube">
+              <div class="access-anim-cube-f"></div>
+              <div class="access-anim-cube-r"></div>
+              <div class="access-anim-cube-t"></div>
+            </div>
+            <div class="access-anim-cube">
+              <div class="access-anim-cube-f"></div>
+              <div class="access-anim-cube-r"></div>
+              <div class="access-anim-cube-t"></div>
+            </div>
+            <div class="access-anim-cube">
+              <div class="access-anim-cube-f"></div>
+              <div class="access-anim-cube-r"></div>
+              <div class="access-anim-cube-t"></div>
+            </div>
+            <div class="access-anim-cube">
+              <div class="access-anim-cube-f"></div>
+              <div class="access-anim-cube-r"></div>
+              <div class="access-anim-cube-t"></div>
+            </div>
+          </div>
           <div class="access-anim-bar-chart">
             <div class="access-anim-bar-chart-line"></div>
             <div class="access-anim-bar-chart-line"></div>
@@ -48,6 +89,18 @@ permalink: /projects/wcagdataviz/
               <div class="access-anim-progress-t-l"></div>
               <div class="access-anim-progress-t-r"></div>
             </div>
+          </div>
+          <div class="access-anim-ppl">
+              <i class="fas fa-male"></i>
+              <i class="fas fa-male"></i>
+              <i class="fas fa-male"></i>
+              <i class="fas fa-male"></i>
+              <i class="fas fa-male"></i>
+              <i class="fas fa-male"></i>
+              <i class="fas fa-male"></i>
+              <i class="fas fa-male"></i>
+              <i class="fas fa-male"></i>
+              <i class="fas fa-male"></i>
           </div>
         </div>
       </div>
