Add design touches

--- a/projects/wcagdataviz.html
+++ b/projects/wcagdataviz.html
@@ -246,7 +246,7 @@ permalink: /projects/wcagdataviz/
 
             <h3>Distribution of Lawsuits Across the US (Top 10 States in 2018)</h3>
             <p>
-              Each blue marker on the US map below represents one of the top 10 states where web accessibility lawsuits were filed in 2018.
+              Each blue marker on the US map below represents one of the top 8 states where web accessibility lawsuits were filed in 2018.
               New York (64%) and Florida (32%) make up 96% of all cases.
             </p>
             
@@ -258,6 +258,7 @@ permalink: /projects/wcagdataviz/
               <div class="map-dataviz-marker ma"></div>
               <div class="map-dataviz-marker ga"></div>
               <div class="map-dataviz-marker pa"></div>
+              <div class="map-dataviz-marker oh"></div>
               <img src="../../img/projects/accessdataviz/usMap.png">
             </div>
           </section>
