Change access url

--- a/projects/wcagdataviz.html
+++ b/projects/wcagdataviz.html
@@ -1,6 +1,6 @@
 ---
 title: Web Accessibility Data Visualization
-permalink: /projects/wcagdataviz/
+permalink: /projects/access/
 ---
 
 <!DOCTYPE html lang="en">
