Add navigation to access

--- a/projects/wcagdataviz.html
+++ b/projects/wcagdataviz.html
@@ -15,7 +15,7 @@ permalink: /projects/access/
     <script src="../../js/wcagdataviz.js"></script>
   </head>
   <body>
-    <div class="title-slide">
+    <div class="title-slide" id="slide-start">
       <div class="heading-wrap">
         <div class="access-anim">
           <div class="access-anim-platform-box">
@@ -114,29 +114,29 @@ permalink: /projects/access/
           <nav>
             <ul>
               <li>
-                <a href="">Start</a>
+                <a href="#slide-start">Start</a>
               </li>
               <li>
-                <a href="">Introduction</a>
+                <a href="#slide-intro">Introduction</a>
               </li>
               <li>
-                <a href="">ADA Title III</a>
+                <a href="#slide-ada">ADA Title III</a>
               </li>
               <li>
-                <a href="">WCAG</a>
+                <a href="#slide-wcag">WCAG</a>
               </li>
               <li>
-                <a href="">Accessibility Checklist</a>
+                <a href="#slide-checklist">Accessibility Checklist</a>
               </li>
               <li>
-                <a href="">Closing Thoughts</a>
+                <a href="#slide-closing">Closing Thoughts</a>
               </li>
             </ul>
           </nav>
           <div class="menu-toggle" tabindex="1" role="button" aria-pressed="false">Menu</div>
         </div>
         <div class="portal">
-          <section>
+          <section id="slide-intro">
             <h1>An Introduction to Accessible Web Design</h1>
             <p>
               <b>1 billion people</b> (15% of the world population) have some form of disability. In the United States, 1 in 4 adults live with a disability. That's 61 million Americans.
@@ -197,7 +197,7 @@ permalink: /projects/access/
             </blockquote>
           </section>
 
-          <section>
+          <section id="slide-ada">
             <h2>Americans With Disabilities Act (ADA) Title III</h2>
             <blockquote cite="https://www.ada.gov/ada_title_III.htm">
               <p>
@@ -266,7 +266,7 @@ permalink: /projects/access/
             </div>
           </section>
 
-          <section>
+          <section id="slide-wcag">
             <h2>Web Content and Accessibility Guidelines (WCAG)</h2>
             <p>
               ADA Title III does not prescribe specific accessibility guidelines for websites.
@@ -291,7 +291,7 @@ permalink: /projects/access/
             </ol>
           </section>
   
-          <section>
+          <section id="slide-checklist">
             <h2>Web Accessibility Checklist and Visual</h2>
             <p>
               Are you a developer or designer? Fill out the following checklist to generate a simple visual representing the areas your site is compliant/noncompliant in.
@@ -986,6 +986,10 @@ permalink: /projects/access/
                 These guidelines present a good opportunity to learn more about accessibility concerns.
               </li>
             </ul>
+          </section>
+
+          <section id="slide-closing">
+            <h2>Closing Thoughts</h2>
           </section>
 
           <section>
