Fix Access WCAG issues

--- a/projects/wcagdataviz.html
+++ b/projects/wcagdataviz.html
@@ -3,8 +3,8 @@ title: Web Accessibility Data Visualization
 permalink: /projects/access/
 ---
 
-<!DOCTYPE html lang="en">
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Access: A Visual Introduction to Accessible Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -139,7 +139,7 @@ permalink: /projects/access/
           <section id="slide-intro">
             <h1>An Introduction to Accessible Web Design</h1>
             <p>
-              <b>1 billion people</b> (15% of the world population) have some form of disability. In the United States, 1 in 4 adults live with a disability. That's 61 million Americans.
+              <strong>1 billion people</strong> (15% of the world population) have some form of disability. In the United States, 1 in 4 adults live with a disability. That's 61 million Americans.
             </p>
             <p>
               Many websites are not designed to accomodate the unique challenges individuals may face - including ability to see/hear content or operate a mouse.
@@ -936,7 +936,7 @@ permalink: /projects/access/
             <h3>How Accessible is My Interface?</h3>
             <p>
               Web accessibility guidelines can feel like a lot to take in.
-              <b>Can visuals impart a more digestible understanding of how product accessibility can be improved?</b>
+              <strong>Can visuals impart a more digestible understanding of how product accessibility can be improved?</strong>
             </p>
             <p>
               The chart below is divided into two columns representing WCAG levels A and AA. Four rows represent the four core principles (Percievable, Operable, Understandable, and Robust).
