--- a/projects/wcagdataviz.html
+++ b/projects/wcagdataviz.html
@@ -262,7 +262,7 @@ permalink: /projects/access/
               <div class="map-dataviz-marker ga"></div>
               <div class="map-dataviz-marker pa"></div>
               <div class="map-dataviz-marker oh"></div>
-              <img src="../../img/projects/accessdataviz/usMap.png">
+              <img src="../../img/projects/accessdataviz/usMap.png" alt="A grey image of the US map">
             </div>
           </section>
 
