Add anchor links

--- a/projects/wcagdataviz.html
+++ b/projects/wcagdataviz.html
@@ -137,7 +137,10 @@ permalink: /projects/access/
         </div>
         <div class="portal">
           <section id="slide-intro">
-            <h1>An Introduction to Accessible Web Design</h1>
+            <h1>
+              An Introduction to Accessible Web Design
+              <a href="#slide-intro" title="An Introduction to Accessible Web Design"><i class="fas fa-link"></i></a>
+            </h1>
             <p>
               <strong>1 billion people</strong> (15% of the world population) have some form of disability. In the United States, 1 in 4 adults live with a disability. That's 61 million Americans.
             </p>
@@ -198,7 +201,10 @@ permalink: /projects/access/
           </section>
 
           <section id="slide-ada">
-            <h2>Americans With Disabilities Act (ADA) Title III</h2>
+            <h2>
+              Americans With Disabilities Act (ADA) Title III
+              <a href="#slide-ada" title="Americans With Disabilities Act (ADA) Title III"><i class="fas fa-link"></i></a>
+            </h2>
             <blockquote cite="https://www.ada.gov/ada_title_III.htm">
               <p>
                 Title III prohibits discrimination on the basis of disability in the activities of places of public accommodations
@@ -267,7 +273,10 @@ permalink: /projects/access/
           </section>
 
           <section id="slide-wcag">
-            <h2>Web Content and Accessibility Guidelines (WCAG)</h2>
+            <h2>
+              Web Content and Accessibility Guidelines (WCAG)
+              <a href="#slide-wcag" title="Web Content and Accessibility Guidelines (WCAG)"><i class="fas fa-link"></i></a>
+            </h2>
             <p>
               ADA Title III does not prescribe specific accessibility guidelines for websites.
               However, many creators and organizations follow the international standard outlined by W3C's Web Content and Accessibility Guidelines.
@@ -292,7 +301,10 @@ permalink: /projects/access/
           </section>
   
           <section id="slide-checklist">
-            <h2>Web Accessibility Checklist and Visual</h2>
+            <h2>
+              Web Accessibility Checklist and Visual
+              <a href="#slide-checklist" title="Web Accessibility Checklist and Visual"><i class="fas fa-link"></i></a>
+            </h2>
             <p>
               Are you a developer or designer? Fill out the following checklist to generate a simple visual representing the areas your site is compliant/noncompliant in.
               Note: All checklist criteria are copied/summarized from W3C WCAG 2.0. The checklist covers levels A and AA.
@@ -1205,11 +1217,17 @@ permalink: /projects/access/
           </section>
 
           <section id="slide-closing">
-            <h2>Closing Thoughts</h2>
+            <h2>
+              Closing Thoughts
+              <a href="#slide-closing" title="Closing Thoughts"><i class="fas fa-link"></i></a>
+            </h2>
           </section>
 
-          <section>
-            <h2>Bibliography</h2>
+          <section id="slide-bibliography">
+            <h2>
+              Bibliography
+              <a href="#slide-bibliography" title="Bibliography"><i class="fas fa-link"></i></a>
+            </h2>
             <p>
               “ADA.gov.” Public Accommodations and Commercial Facilities (Title III), United States Department of Justice, 11 Mar. 2011, www.ada.gov/ada_title_III.htm. ADA Title III information and regulations
             </p>
