--- a/resume.html
+++ b/resume.html
@@ -12,54 +12,91 @@ permalink: /resume/
   </a>
 </h1>
 
-<p>gernenetan@gmail.com</p>
+<p><b>Email:</b> gernenetan@gmail.com</p>
 
 <p>
-  Passionate full-stack designer/developer with a knack for learning new things. Hoping to utilize my interdisciplinary skill set to help make something great!
+    Passionate full-stack designer/developer with a knack for learning new things. Hoping to utilize my interdisciplinary skill set to help make something great!
 </p>
 
-<h2>Experience & Projects</h2>
-<h3>Halp: Slack-First Support Ticketing</h3>
+<p>
+    <b>Skills/Technologies:</b> JavaScript (Vanilla, React, NodeJS, JQuery), Ruby on Rails, HTML, CSS, Python, Java, C++, PHP, MongoDB, SQL, GraphQL
+</p>
+
+<h2>Work &amp; Experience</h2>
+<h3>
+    Workiva: Connected Reporting
+</h3>
+<b>Engineering Intern (May 2020 - Present)</b>
+
+<h3>
+    Halp: Slack-First Support Ticketing
+</h3>
+<b class="resume-title">Engineering Intern (May 2019 - March 2020)</b>
 <ul>
-    <li>Engineering intern (summer 2019 - present)</li>
-    <li>Built MicrosoftTeams Halp integration and Teams-Jira integration</li>
+    <li>Built Microsoft Teams Halp integration and Teams-Jira integration</li>
     <li>Developed web UI for Halp's Answers product</li>
     <li>Built web editor for Halp that mimicks Slack's UX</li>
-    <li>NodeJS, MongoDB, Postgresql, GraphQL, various APIs</li>
-    <li>Graphics/branding and technical content writing</li>
+    <li>Fixed bugs and helped implement UI redesign</li>
+    <li>Shipped features including ticket status color picker and custom bot messaging</li>
+
+    <li>Utilized NodeJS, React, MongoDB, Postgresql, GraphQL, various APIs</li>
+    <li>Created graphics/branding and wrote technical content</li>
 </ul>
 
 <h3>
-  Fairview Web Team:
+    DocForge: Documentation Tool
+</h3>
+<b>Co-Founder and Design Lead (May 2019 - Present)</b>
+<ul>
+    <li>Winner and audience choice - Silicon Flatirons Startup Summer Pitch Night 2019</li>
+    <li>2nd place - CU Boulder's New Venture Challenge pitch contest</li>
+    <li>Built and iterated on pitch demo</li>
+    <li>Designed and implemented product web UI</li>
+    <li>Utilized NodeJS, React</li>
+</ul>
+
+<h3>
+  Fairview Web Team -
   <a href="https://fairviewhs.org">fairviewhs.org</a>
 </h3>
+<b>Co-Leader and Webmaster (2017-2019)</b>
 <ul>
-  <li>2 year leader</li>
-  <li>Lead top-down responsive redesign and content restructure</li>
+    <li>Led top-down responsive redesign and content restructure</li>
+    <li>Supported ~40 000 users and 550 000+ pageviews per month</li>
+    <li>Helped develop and maintain web app</li>
+    <li>Utilized Ruby on Rails, Postgresql</li>
+    <li>Built NodeJS + React Silent Auction web app</li>
 </ul>
 
 <h3>
-  Freelance Full-stack Development
+  Other Full-stack Development & Projects
 </h3>
 <ul>
-  <li>NodeJS, Ruby on Rails, PHP, JavaScript, Python, HTML, CSS</li>
-  <li>Ecommerce web apps, games, static info sites</li>
+  <li><b>Sarea:</b> Digital business card app demo/sandbox (React)</li>
+  <li><b>Jelly-Do:</b> Jelly-themed to-do list app (NodeJS + React)</li>
+  <li><b>Journal Supplies Co:</b> Ecommerce web app for stationery enterprise (NodeJS)</li>
+  <li><b>Operation Give Back:</b> Volunteer match site for students (Ruby on Rails)</li>
+  <li><b>DDCC:</b> Tech club-themed visual novel that responds to changes players make to actual game files (Python)</li>
+  <li><b>Solisles:</b> Fantasy virtual pet site (PHP)</li>
 </ul>
 
 
 <h2>Education</h2>
 <p>
   University of Colorado Boulder<br>
-  Computer Science (BS)
+  Computer Science (BS) | Sophomore | GPA 3.94
 </p>
 <ul>
   <li>Programming and Data Structures</li>
+  <li>Computer Systems</li>
+  <li>Software Development Methods and Tools (Current)</li>
+  <li>Fundamentals of Human Computer Interaction (Current)</li>
 </ul>
 
 <h2>Additional Skills</h2>
 <ul>
-  <li>Seven years of digital art experience</li>
-  <li>Eloquence in writing and communication</li>
+  <li>Digital and traditional art</li>
+  <li>Writing (technical content and fiction)</li>
 </ul>
 
 </div>
