Remove DS_Store

--- a/resume.html
+++ b/resume.html
@@ -24,12 +24,14 @@ permalink: /resume/
 
 <h2>Work &amp; Experience</h2>
 <h3>
-    Workiva: Connected Reporting
+    Workiva: Connected Reporting -
+    <a href="https://www.workiva.com/">workiva.com</a>
 </h3>
 <b>Engineering Intern (May 2020 - Present)</b>
 
 <h3>
-    Halp: Slack-First Support Ticketing
+    Halp: Slack-First Support Ticketing -
+    <a href="https://halp.com/">halp.com</a>
 </h3>
 <b class="resume-title">Engineering Intern (May 2019 - March 2020)</b>
 <ul>
@@ -44,7 +46,8 @@ permalink: /resume/
 </ul>
 
 <h3>
-    DocForge: Documentation Tool
+    DocForge: Documentation Tool -
+    <a href="https://www.docforge.dev/">docforge.dev</a>
 </h3>
 <b>Co-Founder and Design Lead (May 2019 - Present)</b>
 <ul>
