--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,14 @@ permalink: /resume/
     Workiva: Connected Reporting -
     <a href="https://www.workiva.com/">workiva.com</a>
 </h3>
-<b>Engineering Intern (May 2020 - Present)</b>
+<b>Engineering Intern (Summer 2020)</b>
+<ul>
+    <li>Released link parser for support chat messages</li>
+    <li>Released notifications for new support messages</li>
+    <li>Helped refactor complex module code</li>
+    <li>Kickstarted design system research by documenting common props in existing system vs Google's Material UI</li>
+    <li>Utlized DartJS to contribute to a massive multi-repo code base</li>
+</ul>
 
 <h3>
     Halp: Slack-First Support Ticketing -
@@ -92,8 +99,6 @@ permalink: /resume/
 <ul>
   <li>Programming and Data Structures</li>
   <li>Computer Systems</li>
-  <li>Software Development Methods and Tools (Current)</li>
-  <li>Fundamentals of Human Computer Interaction (Current)</li>
 </ul>
 
 <h2>Additional Skills</h2>
