--- a/resume.html
+++ b/resume.html
@@ -92,9 +92,22 @@ permalink: /resume/
 
 
 <h2>Education</h2>
+
+<p>
+  National University of Singapore<br> 
+  Computer Science (BComp)<br>
+  2020-2023
+</p>
+<ul>
+  <li>Programming Methodology II</li>
+  <li>Discrete Structures</li>
+</ul>
+
+
 <p>
   University of Colorado Boulder<br>
-  Computer Science (BS) | Sophomore | GPA 3.94
+  Computer Science (BS) | Sophomore | GPA 3.94<br>
+  2019-2020
 </p>
 <ul>
   <li>Programming and Data Structures</li>
