Tweak Princess Maid page

--- a/projects/princessmaid.html
+++ b/projects/princessmaid.html
@@ -15,7 +15,7 @@ permalink: /projects/princessmaid/
                 As part of a communications class assignment, student teams retold common fairy tales by questioning the original's assumptions and applying critical thinking skills. Our rendition of "The Princess and the Pea" talks about two Singaporean women trying to reconcile their life goals with the prospect of marriage.
             </p>
             <p class="project-p">
-                I would like to thank my teammates Jian Wen, Jun Hong, Shan Rong, and Yida. This project would not be possible without them.
+            I would like to thank my teammates <strong>Jian Wen, Jun Hong, Shan Rong, and Yida</strong>. This project would not be possible without them.
             </p>
         </div>
     </div>
@@ -26,7 +26,7 @@ permalink: /projects/princessmaid/
     <div class="accordion expand">
         <div class="accordion-title">
             <h2 class="accordion-h">Princess Maid Official Video</h2>
-            <div class="accordion-icon"></div>
+            <div class="accordion-icon expand"></div>
         </div>
         <div class="accordion-content">  
             <div class="video-box">
