Update portfolio for 2024

--- a/resume.html
+++ b/resume.html
@@ -19,10 +19,35 @@ permalink: /resume/
 </p>
 
 <p>
-    <b>Skills/Technologies:</b> JavaScript (Vanilla, React, NodeJS, JQuery), Ruby on Rails, HTML, CSS, Python, Java, C++, PHP, MongoDB, SQL, GraphQL
+    <b>Skills/Technologies:</b> JavaScript (Vanilla, React, NodeJS, JQuery), HTML, CSS, Python, Java, C++, PHP, MongoDB, GraphQL
 </p>
 
-<h2>Work &amp; Experience</h2>
+<h2>Experience</h2>
+<h3>
+  Chapter & Club: Niche Social Network (Creative Writing) -
+  <a href="https://www.evye.co/">evye.co</a>
+</h3>
+<b>Founder (From Dec 2022)</b>
+<ul>
+  <li>Designed and built full-stack social networking app with built-in matching, feedback, and group chat features</li>
+  <li>Built and engaged feedback from community of hundreds of writers to validate product/market</li>
+  <li>Recipient of 10k Venture Initiation Program Grant (NUS)</li>
+  <li>NodeJS, NextJS/React, GraphQL</li>
+</ul>
+
+<h3>
+  Evye: Brand Agency -
+  <a href="https://www.evye.co/">evye.co</a>
+</h3>
+<b>Web Development Intern (Winter 2021)</b>
+<ul>
+  <li>Released link parser for support chat messages</li>
+  <li>Released notifications for new support messages</li>
+  <li>Helped refactor complex module code</li>
+  <li>Kickstarted design system research by documenting common props in existing system vs Google's Material UI</li>
+  <li>Utlized DartJS to contribute to a massive multi-repo code base</li>
+</ul>
+
 <h3>
     Workiva: Connected Reporting -
     <a href="https://www.workiva.com/">workiva.com</a>
@@ -96,27 +121,19 @@ permalink: /resume/
 <p>
   National University of Singapore<br> 
   Computer Science (BComp)<br>
-  2020-2023
+  2020-2024
 </p>
-<ul>
-  <li>Programming Methodology II</li>
-  <li>Discrete Structures</li>
-</ul>
 
 
 <p>
   University of Colorado Boulder<br>
-  Computer Science (BS) | Sophomore | GPA 3.94<br>
+  Computer Science (BS)<br>
   2019-2020
 </p>
-<ul>
-  <li>Programming and Data Structures</li>
-  <li>Computer Systems</li>
-</ul>
 
 <h2>Additional Skills</h2>
 <ul>
-  <li>Digital and traditional art</li>
+  <li>Graphic design, digital art, illustration</li>
   <li>Writing (technical content and fiction)</li>
 </ul>
 
