Fix resume error

--- a/resume.html
+++ b/resume.html
@@ -24,8 +24,7 @@ permalink: /resume/
 
 <h2>Experience</h2>
 <h3>
-  Chapter & Club: Niche Social Network (Creative Writing) -
-  <a href="https://www.evye.co/">evye.co</a>
+  Chapter & Club: Niche Social Network (Creative Writing)
 </h3>
 <b>Founder (From Dec 2022)</b>
 <ul>
